--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "BOT-MD",
+    "name": "AMBYS BOTZ",
     "version": "3.5.1",
     "description": "Simple Bot WhatsApp with Baileys Multi Device",
     "depecrated": false,
